# sha256

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  setup_test_data
sha256_asm/: Cargo.toml  build.rs
sha256_asm/src/: lib.rs  sha256_asm.s
sha256_rust/: Cargo.toml
sha256_rust/src/: lib.rs
src/: interface.rs  interface.ui  main.rs  sha256_aarch64.s  sha256_impl.rs  sha256_x86_64.s
