[package]
name = "projekt-asm"
version = "0.1.0"
authors = ["kmolski <starfighter413@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_16"] }
rayon = "1.4.1"

[profile.release]
opt-level = 3
