[package]
name = "projekt-asm"
version = "0.1.0"
authors = ["kmolski <starfighter413@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_16"] }
glib = { version = "0.10.3", features = ["v2_44"] }
rayon = "1.4.1"
sha256_rust = { path = "sha256_rust" }
sha256_asm = { path = "sha256_asm" }

[profile.release]
opt-level = 3
