[package]
name = "sha256"
version = "0.1.0"
authors = ["kmolski <starfighter413@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
sha256_rust = { path = "./sha256_rust" }
sha256_asm = { path = "./sha256_asm" }

[profile.release]
opt-level = 3
